--- a/login/views/login.jade
+++ b/login/views/login.jade
@@ -4,8 +4,8 @@ block content
     form(method='POST')
         legend Login
         .form-group
-            label(for='username') Username
-            input.form-control(type='text', name='username', autofocus)
+            label(for='email') Email
+            input.form-control(type='text', name='email', autofocus)
         .form-group
             label(for='password') Password
             input.form-control(type='password', name='password')
