--- a/login/views/signup.jade
+++ b/login/views/signup.jade
@@ -1,18 +1,18 @@
-extends layout
-
-block content
-    form(method='POST')
-        legend Signup
-        .form-group
-            label(for='full_name') Full Name
-            input.form-control(type='text', name='full_name', autofocus)
-        .form-group
-            label(for='email') Email
-            input.form-control(type='text', name='email')
-        .form-group
-            label(for='phone_number') Phone Number
-            input.form-control(type='text', name='phone_number')
-        .form-group
-            label(for='password') Password
-            input.form-control(type='text', name='password')
-        button.btn.btn-primary(type='submit') Signup
+//extends layout
+//
+//block content
+//    form(method='POST')
+//        legend Signup
+//        .form-group
+//            label(for='full_name') Full Name
+//            input.form-control(type='text', name='full_name', autofocus)
+//        .form-group
+//            label(for='email') Email
+//            input.form-control(type='text', name='email')
+//        .form-group
+//            label(for='phone_number') Phone Number
+//            input.form-control(type='text', name='phone_number')
+//        .form-group
+//            label(for='password') Password
+//            input.form-control(type='text', name='password')
+//        button.btn.btn-primary(type='submit') Signup
