--- a/login/views/layout.jade
+++ b/login/views/layout.jade
@@ -27,7 +27,7 @@ html
               li
                 a(href='/login') Login
               li
-                a(href='/signup') Signup
+                a(href='/_signUp') SignUp
     .container
       if messages.error
         .alert.alert-danger
