--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 
 @import "defaults";
 
+
 @import "menuDrawer";
 @import "template";
 @import "rating";
@@ -13,3 +14,6 @@
 @import "shopping";
 @import "passwordRecovery";
 @import "passwordReset";
+
+
+@import "index";
