--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,33 +1,44 @@
 #page-content {
+  margin: 0;
+  padding: 0;
   position: relative;
-  height: calc(100vh - 50px);
+  height: 100vh;
   width: 100vw;
-}
-
-#page-content > div {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  left: 0;
   overflow: visible;
-  overflow-x: visible;
-  background-color: white;
-  transition: transform 0.5s;
+  transition: transform 1.2s;
 
-
-  &> div{
-    width: 100vw;
+  & > div {
+    position: fixed;
     height: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
-    top: 0;
+    width: 100%;
     left: 0;
-    position: absolute;
-  }
+    overflow: visible;
+    overflow-x: visible;
+    background-color: white;
+    transition: transform 1.2s;
 
-  @for $i from 1 through 20 {
-    &>div:nth-child(#{$i}) {
-      transform: translateX(#{($i - 1) * 100%});
+
+    & > div {
+      padding-top: 100px;
+      width: 100vw;
+      height: 100%;
+      overflow-y: auto;
+      overflow-x: hidden;
+      top: 0;
+      left: 0;
+      position: absolute;
+      transition: transform 1.2s;
+    }
+
+    @for $i from 1 through 20 {
+      & > div:nth-child(#{$i}) {
+        transform: translateX(#{($i - 1) * 100%});
+      }
+    }
+  }
+  @for $i from 1 through 10 {
+    & > div:nth-child(#{$i}) {
+      top: #{($i - 1) * 100%};
     }
   }
 }
