--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -6,6 +6,10 @@
 .cd-main-content{
   overflow: hidden;
 }
+#panel-Header{
+  background-color: darkorange;
+}
+
 .cd-panel-header{
   background-color: darkorange;
 }
@@ -14,9 +18,9 @@
   background-color: white;
   position: fixed;
   width: 100%;
-  height: 50px;
+  height: 100px;
   z-index: 2000;
-  border-bottom: solid  lightgrey 1px;
+  border-bottom: solid  lightgrey 3px;
   top: 0
 }
 #Glyph{
@@ -86,11 +90,19 @@ button:focus {
   #page-content{
     margin-top:100px;
   }
+  #User{
+    height:50px;
+
+  }
 }
 @media screen and(min-width: 1000px){
   #Fetch{
     //margin-top: -20px;
     font-size: 150%;
+  }
+  #User{
+    height:100px;
+
   }
   #page-content{
     margin-top:100px;
