--- a/scss/_shopping.scss
+++ b/scss/_shopping.scss
@@ -5,39 +5,39 @@
     overflow: hidden;
   }
 
-  #footerBars {
-    .footer2 {
-      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-      0 25px 50px 0 rgba(0, 0, 0, 0.1);
-      margin-left: auto;
-      margin-right: auto;
-      width: 79%;
-      text-align: left;
-      border: 1px solid #ededed;
-      padding: 4px;
-      background-color: #fff;
-    }
-
-    .footer3 {
-      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-      0 25px 50px 0 rgba(0, 0, 0, 0.1);
-      margin-left: auto;
-      margin-right: auto;
-      width: 78%;
-      text-align: left;
-      border: 1px solid #ededed;
-      padding: 3px;
-      background-color: #fff;
-    }
-  }
-
-  #submit_list {
-    text-align: center;
-    width: 33%;
-    color: $fetchOrange;
-    border:0;
-    outline:none;
-    text-decoration: none;
-  }
+  //#footerBars {
+  //  .footer2 {
+  //    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+  //    0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  //    margin-left: auto;
+  //    margin-right: auto;
+  //    width: 79%;
+  //    text-align: left;
+  //    border: 1px solid #ededed;
+  //    padding: 4px;
+  //    background-color: #fff;
+  //  }
+  //
+  //  .footer3 {
+  //    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+  //    0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  //    margin-left: auto;
+  //    margin-right: auto;
+  //    width: 78%;
+  //    text-align: left;
+  //    border: 1px solid #ededed;
+  //    padding: 3px;
+  //    background-color: #fff;
+  //  }
+  //}
+  //
+  //#submit_list {
+  //  text-align: center;
+  //  width: 33%;
+  //  color: $fetchOrange;
+  //  border:0;
+  //  outline:none;
+  //  text-decoration: none;
+  //}
 
 }
