--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -1,7 +1,7 @@
 
 $fetchOrange: #f36100;
 
-* {
+:not(.box, .footerBars) {
   overflow: hidden;
 }
 
@@ -138,6 +138,7 @@ h3 {
   }
 
   #_driver_footerInfo{
+    overflow: auto;
   }
 
   #submit_list, #_driver_submit_list {
