--- a/scss/_tickets.scss
+++ b/scss/_tickets.scss
@@ -1,4 +1,9 @@
 #tickets {
+  h4{
+    color:lightgray;
+    font-weight:300;
+
+  }
   .ticket {
       position: relative;
       font-size: 14px;
@@ -21,49 +26,59 @@
     align-items: stretch;
   }
 
-  #buttons {
-    display: flex !important;
+  //#buttons {
+  //  display: flex !important;
+  //
+  //}
+  //
+  //#buttons li {
+  //  float: left;
+  //  flex: 1 1 auto;
+  //  flex-basis: 25%;
+  //  font-size: 24px;
+  //}
 
-  }
-
-  #buttons li {
-    float: left;
-    flex: 1 1 auto;
-    flex-basis: 25%;
-    font-size: 24px;
-  }
-
-  #R, #T, #W, #V {
-    padding: 20px;
-    text-align: center;
-    text-decoration: none;
-    display: table-cell;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-  }
-
-  #buttons li button.selected {
-    background-color: darkorange;
-    color: white;
-  }
+  //#R, #T, #W, #V {
+  //  padding: 20px;
+  //  text-align: center;
+  //  text-decoration: none;
+  //  display: table-cell;
+  //  width: 100%;
+  //  height: 100%;
+  //  margin: 0;
+  //  -webkit-text-size-adjust: 100%;
+  //  -ms-text-size-adjust: 100%;
+  //}
+  //
+  //#buttons li button.selected {
+  //  background-color: darkorange;
+  //  color: white;
+  //}
 
   .store {
-    padding: 10px;
+    //padding-right: 1px;
+    //padding: 0;
+    border: solid 1px lightgray;
+    border-radius: 5px;
   }
+  .marketButtons {
 
-  .store:hover {
-    background-color: rgba(33, 19, 0, 0.07);
-    color: $fetchOrange;
+    margin: auto;
+    margin-bottom:10px;
+
+    @media screen and(max-width: 500px) {
+      width: 95%;
+    }
+    @media screen and(min-width: 500px) {
+      width: 80%;
+    }
   }
 
   .selected {
-    border: 2px solid rgba(33, 19, 0, 0.11);
-    border-bottom: 0;
-    color: white;
-    background-color: $fetchOrange;
+    h4{
+      color: black;
+      font-weight:300;
+    }
   }
 
   .hidden {
@@ -72,31 +87,5 @@
 
   .show {
     display: flex;
-  }
-
-  #footerBars {
-    .footer2 {
-      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-      0 25px 50px 0 rgba(0, 0, 0, 0.1);
-      margin-left: auto;
-      margin-right: auto;
-      width: 79%;
-      text-align: left;
-      border: 1px solid #ededed;
-      padding: 4px;
-      background-color: #fff;
-    }
-
-    .footer3 {
-      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-      0 25px 50px 0 rgba(0, 0, 0, 0.1);
-      margin-left: auto;
-      margin-right: auto;
-      width: 78%;
-      text-align: left;
-      border: 1px solid #ededed;
-      padding: 3px;
-      background-color: #fff;
-    }
   }
 }
