--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -108,7 +108,7 @@ h3 {
   }
 
 
-  .item ,.driverItem{
+  .item ,.driverItem, .viewTicketItem {
     @media screen and(max-width:500px){
       font-size: 1em;
     }
