--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -46,12 +46,12 @@
 
 #toggling{
   position:absolute;
-  margin-top:8%;
+  margin-top:2%;
 }
 #toggleButton{
-  position:absolute;
+  //position:absolute;
   margin-left:100px;
-  margin-top:7%;
+  margin-top:1%;
 }
 .toggle-button {position:absolute;left:30px; top:10px; background-color: white; margin: 5px 0; border-radius: 20px; border: 0px solid #D0D0D0; height: 24px; cursor: pointer; width: 50px; position: relative; display: inline-block; user-select: none; -webkit-user-select: none; -ms-user-select: none; -moz-user-select: none; }
 .toggle-button button {position:absolute;left:30px; cursor: pointer; outline: 0; display:block; position: absolute; left: 0; top: 3px; border-radius: 100%; width: 24px; height: 24px; background-color: white; float: left; margin: -3px 0 0 -3px; border: 2px solid #D0D0D0; transition: left 0.3s; }
