Added complete takeProfilPicture page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,9 @@
 @import "shopping";
 @import "passwordRecovery";
 @import "passwordReset";
-@import "_yourDeliveries";
+@import "yourDeliveries";
 @import "shoppingStatus";
+@import "takeProfilePicture";
+
 
 @import "index";
