--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -206,5 +206,24 @@ h3 {
   }
 }
 
+#loading_icon{
+  .glyphicon-repeat-animate {
+    -webkit-animation: spin2 .7s infinite linear;
+    font-size: 30px;
+    color: orange;
+  }
+
+  @-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+  }
+
+  @keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+  }
+}
+
+
 
 
