updates on panel

--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -8,6 +8,14 @@
 }
 #panel-Header{
   background-color: darkorange;
+  margin-top:-20px;
+  height:90px;
+   #index-image-user{
+     height: 50px;
+     width: 50px;
+     margin-top: 30px;
+     margin-left: 15px;
+  }
 }
 
 .cd-panel-header{
