--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -64,6 +64,7 @@ button:focus {
 #Butt{
   margin-top:50px;
   overflow-y: auto;
+  overflow-x: hidden;
   div{
     cursor: pointer;
     width:100%;
