--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,6 +1,5 @@
 #page-content {
   margin: 0;
-  padding: 0;
   position: relative;
   height: 100vh;
   width: 100vw;
@@ -30,6 +29,13 @@
       left: 0;
       position: absolute;
       transition: transform 1s;
+      & > *{
+        margin-bottom: 15px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
 
     @for $i from 1 through 20 {
