Added some css that is subject to change

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -8,7 +8,7 @@ $fetchOrange: #f36100;
 
 
 body, html {
-  background-color: #ffffff;
+  background-color: #ffdb99;
   overflow: visible;
   width: 100vw;
   height: 100vh;
