--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -1,19 +1,25 @@
 .cd-panel-container{
   background-color: #2E3233;
-  overflow-y: scroll;
 
 }
 .cd-panel-content{
-  margin-top:60px;
+  height: calc(100% - 130px);
+  margin-top:130px;
+  overflow-y: scroll;
 }
 .cd-main-content{
 
   overflow: hidden;
 }
+.cd-panel-container {
+  @include outline-shadow;
+}
 #panel-Header{
+  position: relative;
+  z-index: 1000000000;
   background-color: darkorange;
-  height:90px;
-
+  height:150px;
+  @include outline-shadow;
 
    #index-image-user{
      height: 50px;
@@ -36,13 +42,13 @@
 }
 
 #User{
-  background-color: white;
+  background-color: #ffb732;
   position: fixed;
   width: 100%;
   height: 100px;
   z-index: 2000;
-  border-bottom: solid  lightgrey 3px;
-  top: 0
+  top: 0;
+  @include outline-shadow;
 }
 
 
@@ -62,7 +68,7 @@ button:focus {
   line-height: 50px;
 }
 #Butt{
-  margin-top:50px;
+  margin-top:30px;
   overflow-y: auto;
   overflow-x: hidden;
   div{
