--- a/scss/_takeProfilePicture.scss
+++ b/scss/_takeProfilePicture.scss
@@ -47,18 +47,18 @@
     height: 100%;
   }
 
-  #profile-button-box {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+  //#profile-button-box {
+  //  position: relative;
+  //  top: 50%;
+  //  transform: translateY(-50%);
+  //}
 
   #profile-outer {
     height: 100%;
   }
-
-  #profile-image-square {
-    top: 50%;
-    transform: translateY(-50%);
-  }
+  //
+  //#profile-image-square {
+  //  top: 50%;
+  //  transform: translateY(-50%);
+  //}
 }
