--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -58,15 +58,18 @@
   color:orangered;
   position:absolute;
   margin-top:2%;
+  font-size:26px;
 }
-#toggleButton{
+#toggleButton
+{
+
   //position:absolute;
   margin-left:100px;
   margin-top:1%;
 }
-.toggle-button {position:absolute;left:30px; top:10px; background-color: white; margin: 5px 0; border-radius: 20px; border: 0px solid #D0D0D0; height: 24px; cursor: pointer; width: 50px; position: relative; display: inline-block; user-select: none; -webkit-user-select: none; -ms-user-select: none; -moz-user-select: none; }
-.toggle-button button {position:absolute;left:30px; cursor: pointer; outline: 0; display:block; position: absolute; left: 0; top: 3px; border-radius: 100%; width: 24px; height: 24px; background-color: white; float: left; margin: -3px 0 0 -3px; border: 2px solid #D0D0D0; transition: left 0.3s; }
+.toggle-button {position:absolute;left:30px; top:10px; background-color: white; margin: 5px 0; border-radius: 20px; border: 0px solid #D0D0D0; height: 20px; cursor: pointer; width: 50px; position: relative; display: inline-block; user-select: none; -webkit-user-select: none; -ms-user-select: none; -moz-user-select: none; }
+.toggle-button button {position:absolute;left:30px; cursor: pointer; outline: 0; display:block; position: absolute; left: 0; top: 3px; border-radius: 100%; width: 20px; height: 20px; background-color: white; float: left; margin: -3px 0 0 -3px; border: 2px solid #D0D0D0; transition: left 0.3s; }
 .toggle-button-selected { top:10px; background-color: #83B152; border: 2px solid #7DA652; }
-.toggle-button-selected button {left: 26px; top: -2px; margin: 0; border: none; width: 24px; height: 24px; box-shadow: 0 0 4px rgba(0,0,0,0.1); }
+.toggle-button-selected button {left: 28px; top: -2px; margin: 0; border: none; width: 20px; height: 20px; box-shadow: 0 0 4px rgba(0,0,0,0.1); }
 
 .center { text-align:right; }
