changing home css a little

--- a/scss/_homePage.scss
+++ b/scss/_homePage.scss
@@ -8,7 +8,7 @@
 
   .shop {
     position: relative;
-    margin-top:10%;
+
   }
 
   div{
@@ -44,7 +44,7 @@
   figure {
     position: relative;
     padding: 16px 8px 0 8px;
-    margin: 0;
+    margin:20px 0;
     cursor: pointer;
     img {
       border-radius: 5px;
