--- a/scss/_takeProfilePicture.scss
+++ b/scss/_takeProfilePicture.scss
@@ -43,20 +43,20 @@
 }
 
 @media only screen and (min-width: 992px) {
-  #profile-button-box-outer {
-    height: 100%;
-  }
-
-  //#profile-button-box {
-  //  position: relative;
-  //  top: 50%;
-  //  transform: translateY(-50%);
+  //#profile-button-box-outer {
+  //  height: 100%;
   //}
-
-  #profile-outer {
-    height: 100%;
-  }
   //
+  ////#profile-button-box {
+  ////  position: relative;
+  ////  top: 50%;
+  ////  transform: translateY(-50%);
+  ////}
+  //
+  //#profile-outer {
+  //  height: 100%;
+  //}
+  ////
   //#profile-image-square {
   //  top: 50%;
   //  transform: translateY(-50%);
