--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -71,6 +71,7 @@ h3 {
   padding: 0;
   margin: auto;
   text-align: center;
+  opacity:.9;
 
   @media screen and(max-width: 500px) {
     width: 95%;
@@ -83,6 +84,8 @@ h3 {
   0 25px 50px 0 rgba(0, 0, 0, 0.1);
 
   .input {
+
+    background-color: white;
     position: relative;
     @media screen and (max-width: 500px) {
       font-size: 17px;
@@ -101,6 +104,7 @@ h3 {
     width: 100%;
     line-height: 2;
     text-indent: 7%;
+    margin:0;
   }
 
   .item, .driverItem, .viewTicketItem {
@@ -118,6 +122,7 @@ h3 {
     line-height: 2;
     text-indent: 7%;
     text-align: left;
+    background-color: white;
   }
 
   .selected {
