--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -47,7 +47,7 @@ button {
   text-decoration: none;
 }
 
-h2, h3, h4 {
+h2, h3, h4, h6 {
   color: $fetchOrange;
   opacity: .8;
   margin: 15px 0;
@@ -65,6 +65,12 @@ h3 {
   font-weight: 100;
   text-align: center;
 }
+h6 {
+  font-size: 1.5em;
+  font-weight: 200;
+  margin: 0;
+  text-shadow: 1px 1px rgba(119, 119, 119, 0.36);
+}
 
 // this is for the box's around the shopping and driver list
 .box {
@@ -72,6 +78,7 @@ h3 {
   margin: auto;
   text-align: center;
   opacity:.9;
+  background-color:white;
 
   @media screen and(max-width: 500px) {
     width: 95%;
@@ -85,7 +92,7 @@ h3 {
 
   .input {
 
-    background-color: white;
+    //background-color: white;
     position: relative;
     @media screen and (max-width: 500px) {
       font-size: 17px;
@@ -122,7 +129,7 @@ h3 {
     line-height: 2;
     text-indent: 7%;
     text-align: left;
-    background-color: white;
+    //background-color: white;
   }
 
   .selected {
