changed the opacity on the footerBars

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -175,6 +175,8 @@ h6 {
 }
 
 .footerBars {
+
+  opacity:.9;
   .footer2 {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
     0 25px 50px 0 rgba(0, 0, 0, 0.1);
