--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -254,3 +254,10 @@ h6 {
   padding: 0;
   min-height: 0;
 }
+
+.box2{
+  background-color: white;
+  opacity:.9;
+  width:60%;
+  border:solid 1px lightgray;
+}
