--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -62,6 +62,10 @@ h2 {
   font-size: 40px;
   font-weight: 100;
   text-align: center;
+
+  @media screen and (max-width:500px){
+      font-size:30px;
+  }
 }
 
 h3 {
