--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,8 @@
 @import "yourDeliveries";
 @import "shoppingStatus";
 @import "takeProfilePicture";
+@import "notification";
+@import "chat";
 
 
 @import "index";
