--- a/scss/_notification.scss
+++ b/scss/_notification.scss
@@ -6,7 +6,7 @@
 #notifications {
   position: fixed;
   z-index: 2000;
-  top: 0;
+  margin-top: 50px;
   right: -400px;
   width: 400px;
   max-width: 100vw;
