--- a/scss/_notification.scss
+++ b/scss/_notification.scss
@@ -26,6 +26,11 @@
   overflow: hidden;
   transform: translateX(0px);
   @include emphasis-shadow;
+  .notification-inner {
+    width: 100%;
+    height: 80px;
+    position: relative;
+  }
   .text {
     position: absolute;
     width: calc(100% - 115px);
