changed opacity for the boxs

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -267,7 +267,7 @@ h6 {
     width: 90%;
   }
 
-  background-color: white;
+  background-color: rgba(255,255,255,.9);
   opacity:.9;
   width:60%;
   border:solid 1px lightgray;
