--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -14,10 +14,17 @@
     margin: 0 10px 0 0;
     background-color: orange;
     pointer-events: auto;
+    transform: translateY(0);
     float: right;
     @include outline-shadow;
   }
+  .chat.min {
+    transform: translateY(360px);
+  }
   .chat-head {
+    position: relative;
+    z-index:2500;
+    @include outline-shadow;
     height: 40px;
     width: 100%;
     .chat-profile {
@@ -33,11 +40,12 @@
     .chat-name {
       cursor: pointer;
       float: left;
+      padding-top: 2px;
       height: 40px;
       width: 200px;
       margin: 0 10px;
-      line-height: 40px;
-      font-size: 24px;
+      line-height: 38px;
+      font-size: 17px;
     }
     .chat-close {
       cursor: pointer;
@@ -52,6 +60,8 @@
     }
   }
   .window {
+
+    z-index:2100;
     overflow: auto;
     padding: 10px;
     height: 320px;
@@ -59,17 +69,19 @@
     background-color: white;
     div > div {
       padding: 5px 10px;
-      background-color: orange;
+
       border-radius: 10px;
-      max-width: 260px;
+      max-width: 220px;
     }
     .ours {
       overflow: auto;
       height: auto;
       display: block;
       width: 100%;
+      margin: 10px 0 0 0;
       div {
         float: right;
+        background-color: orange;
       }
     }
     .theirs {
@@ -77,12 +89,17 @@
       height: auto;
       width: 100%;
       display: block;
+      margin: 10px 0 0 0;
       div {
         float: left;
+        background-color: cornflowerblue;
       }
     }
   }
   .input {
+
+    z-index:2500;
+    @include outline-shadow;
     height: 40px;
     width: 300px;
     .photo {
@@ -102,8 +119,8 @@
       width: 260px;
       input {
         width: 240px;
-        margin: 0 10px 0 0;
-        height: 40px;
+        margin: 2px 10px 0 0;
+        height: 38px;
       }
     }
   }
