--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -3,20 +3,18 @@
   background-color: #2E3233;
 
 }
-#accSetting-img{
-  width:70%;
-  height:70%;
-  z-index: 1;
-  -webkit-filter: blur(8px);
-}
+//#accSetting-img{
+//  width:70%;
+//  height:70%;
+//  z-index: 1;
+//  -webkit-filter: blur(8px);
+//}
 #accSettingAbove-img{
-  position:absolute;
-  top:7%;
-  left:35%;
-  height:14%;
-  width:30%;
-  z-index: 3;
-  border: 2px solid whitesmoke;
+
+  height:25%;
+  width:25%;
+
+  border: 3px solid black;
 }
 .cd-panel-content{
   height: calc(100% - 130px);
