--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -1,7 +1,7 @@
 $fetchOrange: #f36100;
 * {
   box-sizing: border-box;
-  transition: all 0.5s;
+  transition: transform 0.5s;
 }
 ::-webkit-input-placeholder {
   color: black;
