--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -75,6 +75,6 @@
   margin: -3px 0 0 -3px; border: 2px solid #D0D0D0; transition: left 0.3s; }
 
 .toggle-button-selected { top:10px; border: 2px solid #7DA652; }
-.toggle-button-selected button {left: 28px; top: -1px; margin: 0; border: 2px; width: 20px; height: 20px;  }
+.toggle-button-selected button {left: 28px; top: -1px; margin: 0; border: 2px solid #D0D0D0; width: 20px; height: 20px;  }
 
 .center { text-align:right; }
