--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -3,6 +3,9 @@
   background-color: #2E3233;
 
 }
+a{
+  cursor:pointer;
+}
 //#accSetting-img{
 //  width:70%;
 //  height:70%;
@@ -11,10 +14,10 @@
 //}
 #accSettingAbove-img{
 
-  height:25%;
-  width:25%;
-
-  border: 3px solid black;
+  height:40%;
+  width:40%;
+  padding:1px;
+  border: 2px solid grey;
 }
 .cd-panel-content{
   height: calc(100% - 130px);
