add margin-bottom for rows on the ticket page

--- a/scss/_tickets.scss
+++ b/scss/_tickets.scss
@@ -4,6 +4,12 @@
     font-weight:300;
 
   }
+
+  .row{
+
+    margin-bottom:0;
+
+  }
   .ticket {
       position: relative;
       font-size: 14px;
