--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -54,7 +54,7 @@ button {
   text-decoration: none;
 }
 
-h2, h3, h4, h6 {
+h2, h3, h4, h5, h6 {
   color: $fetchOrange;
   opacity: .8;
   margin: 15px 0;
@@ -76,6 +76,11 @@ h3 {
   font-weight: 100;
   text-align: center;
 }
+h4{
+  font-size: 20px;
+  opacity:1;
+}
+
 h6 {
   font-size: 1.5em;
   font-weight: 200;
