--- a/scss/_tickets.scss
+++ b/scss/_tickets.scss
@@ -1,15 +1,13 @@
 #tickets {
   h4{
-    color:lightgray;
-    font-weight:300;
-
+    color:black;
+    font-weight:100;
   }
 
   .row{
-
     margin-bottom:0;
-
   }
+
   .ticket {
       position: relative;
       font-size: 14px;
@@ -35,7 +33,7 @@
   .store {
     border-radius: 5px;
     box-shadow: 0px 1px 3px #888888;
-    margin: 0 0px;
+    margin: 0 2px;
     width:100%;
     padding:0;
 
@@ -58,8 +56,8 @@
 
   .selected {
     h4{
-      color: black;
-      font-weight:300;
+      color: grey;
+      font-weight:100;
     }
   }
 
