--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -93,6 +93,7 @@ h6 {
 .box {
   padding: 0;
   margin: auto;
+  margin-top:30px;
   text-align: center;
   opacity: .9;
   background-color: white;
@@ -101,6 +102,10 @@ h6 {
 
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
   0 25px 50px 0 rgba(0, 0, 0, 0.1);
+
+  @media screen and (max-width: 500px){
+    margin-top:10px;
+  }
 
   .input {
 
