--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -8,7 +8,6 @@ $fetchOrange: #f36100;
   color: black;
 }
 
-
 body, html {
   overflow: visible;
   width: 100vw;
@@ -34,12 +33,14 @@ ul {
 li {
 
 }
+
 .container {
   padding: 0;
   .row {
     margin: 0;
   }
 }
+
 .btn-primary {
   background: $fetchOrange;
   border: none;
@@ -58,7 +59,6 @@ button {
 
 h2, h3, h4, h5, h6 {
   color: $fetchOrange;
-  opacity: .8;
   margin: 15px 0;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -79,9 +79,8 @@ h3 {
   text-align: center;
 }
 
-h4{
+h4 {
   font-size: 20px;
-  opacity:1;
 }
 
 h6 {
@@ -91,51 +90,38 @@ h6 {
   text-shadow: 1px 1px rgba(119, 119, 119, 0.36);
 }
 
-
 .box {
   padding: 0 0 15px 0;
   text-align: center;
-  opacity: .9;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
   width: calc(100% - 30px);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
   0 25px 50px 0 rgba(0, 0, 0, 0.1);
   margin-top: 15px;
 
-
   .input {
 
-    //background-color: white;
     position: relative;
-    @media screen and (max-width: 500px) {
-      font-size: 17px;
-    }
-    @media screen and (min-width: 500px) {
+    font-size: 17px;
+    @include tablet {
       font-size: 24px;
     }
-    //font-family: inherit;
-    //font-weight: inherit;
     outline: none;
-    //color: inherit;
     -webkit-font-smoothing: antialiased;
     text-align: left;
     border: none;
-    //background: #fff;
     width: 100%;
     line-height: 2;
     text-indent: 7%;
     margin: 0;
   }
 
-  .item, .driverItem, .viewTicketItem, .shoppingStatusItem, .cancelTicketItem{
-    @media screen and(max-width: 500px) {
-      font-size: 1em;
-    }
-    @media screen and(min-width: 500px) {
-      font-size: 2em;
+  .item, .driverItem, .viewTicketItem, .shoppingStatusItem, .cancelTicketItem {
+    font-size: 17px;
+    @include tablet {
+      font-size: 24px;
     }
     position: relative;
-    font-size: 24px;
     border-top: 1px solid #ededed;
     font-weight: bold;
     width: 100%;
@@ -143,17 +129,6 @@ h6 {
     text-indent: 7%;
     text-align: left;
     //background-color: white;
-  }
-
-  .selected {
-    text-decoration: line-through;
-    opacity: .3;
-  }
-
-  #shopping_numItems, #driver_numItems, #_viewTicket_numItems, #_shoppingStatus_numItems, #_cancelTicket_numItems {
-    float: left;
-    width: 33%;
-    //display: inline;
   }
 
   .shopping_list {
@@ -164,21 +139,11 @@ h6 {
     //margin: 5% auto auto;
     text-indent: 7%;
   }
-
-  #shopping_submit_list, #_driver_submit_list, #_viewTicket_submit_list #shoppingStatus_list, #cancelTicket_list{
-    text-align: center;
-    width: 33%;
-    color: $fetchOrange;
-    border: 0;
-    outline: none;
-    text-decoration: none;
-  }
-
 }
 
 .footerBars {
   margin-bottom: 15px;
-  opacity: .9;
+  background: none;
   .footer2 {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
     0 25px 50px 0 rgba(0, 0, 0, 0.1);
@@ -188,7 +153,8 @@ h6 {
     text-align: left;
     border: 1px solid #ededed;
     padding: 4px;
-    background-color: #fff;
+
+    background-color: rgba(255, 255, 255, 0.9);
   }
 
   .footer3 {
@@ -200,7 +166,8 @@ h6 {
     text-align: left;
     border: 1px solid #ededed;
     padding: 3px;
-    background-color: #fff;
+
+    background-color: rgba(255, 255, 255, 0.9);
   }
 }
 
@@ -229,8 +196,6 @@ h6 {
     }
   }
 }
-
-
 
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-4-offset-4, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
   padding: 0;
