--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -20,6 +20,7 @@ body, html {
   -moz-background-size: cover;
 }
 
+
 img {
   width: 100%;
 }
@@ -201,3 +202,7 @@ h6 {
   min-height: 0;
 }
 
+
+.btn {
+  background-color: orange;
+}
