--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -35,6 +35,7 @@ li {
 
 }
 
+
 .container {
   padding: 0;
   .row {
@@ -202,7 +203,9 @@ h6 {
   min-height: 0;
 }
 
-
+.col-md-6 {
+  padding: 0 15px;
+}
 .btn {
   background-color: orange;
 }
