changed the login font on menu bar for small screens

--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -73,6 +73,15 @@ a{
     padding:0;
     @include outline-shadow;
   }
+
+  h4 {
+    @media screen and (max-width: 570px) {
+      font-size: 15px;
+      margin: 20px 0;
+      font-weight: 100;
+      opacity: 1;
+    }
+  }
 }
 
 
