--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -72,7 +72,8 @@ h2 {
   text-align: center;
 
   @media screen and (max-width: 570px) {
-    font-size: 21px;
+    font-size: 30px;
+    margin-bottom:0;
   }
 }
 
