--- a/scss/_tickets.scss
+++ b/scss/_tickets.scss
@@ -2,7 +2,7 @@
 
   label{
     margin:3px 0;
-    margin-left:32%;
+    margin-left: 29%;
     font-weight:100;
     color:black;
   }
@@ -37,7 +37,7 @@
     align-items: stretch;
   }
 
-  .store {
+  .store-ticket{
     //border-radius: 5px;
     //box-shadow: 0px 1px 3px #888888;
     margin: 0 2px;
