added new Font-Family Hell_Neue

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -63,7 +63,8 @@ button {
 h2, h3, h4, h5, h6 {
   color: $fetchOrange;
   margin: 15px 0;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Hell_Neue;
+  //font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h2 {
