--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -12,7 +12,7 @@
 //@font-face{
 //  font-family: Brandon;
 //  src:url(/resources/fonts/Brandon_light.otf);
-}
+//}
 
 @font-face{
   font-family: Hell_Neue;
