--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -112,7 +112,7 @@ button:focus {
     width:100%;
     height: 60px;
     border:0;
-    padding: 0;
+    padding-left: 10px;
     border:none;
     color:darkgray;
     background-color:transparent;
