changed the take picture page

--- a/scss/_takeProfilePicture.scss
+++ b/scss/_takeProfilePicture.scss
@@ -1,7 +1,8 @@
 #video1 {
-  position: absolute;
-  width: auto;
-  height: 100%;
+  //position: absolute;
+  //width: auto;
+  //height: 100%;
+  //border:solid 1px black;
 }
 
 #canvas1 {
