--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -12,13 +12,13 @@ a{
 //  z-index: 1;
 //  -webkit-filter: blur(8px);
 //}
-#accSettingAbove-img{
-
-  height:55%;
-  width:55%;
-  padding:1px;
-  border: 2px solid grey;
-}
+//#accSettingAbove-img{
+//
+//  height:55%;
+//  width:55%;
+//  padding:1px;
+//  border: 2px solid grey;
+//}
 .cd-panel-content{
   height: calc(100% - 130px);
   margin-top:130px;
