changed userRating Page

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -222,7 +222,7 @@ h6 {
   background-color: orange;
 }
 
-#accSettingAbove-img, #rateDriver-img, #rateUser-img{
+#accSettingAbove-img, #rateDriver-img/*, #rateUser-img*/{
 
   height:55%;
   width:55%;
