--- a/scss/rateUser.scss
+++ b/scss/rateUser.scss
@@ -21,9 +21,30 @@
     position: relative;
     height:200px;
     margin-top:8%;
+
+    @media screen and (max-width:991px){
+      margin-top:20px;
+
+    }
   }
   .glyphicon, .glyphicon-heart {
     font-size:35px;
+  }
+
+  #rateUser-img{
+    height:55%;
+    width:55%;
+    padding:1px;
+    border: 2px solid grey;
+
+    @media screen and (max-width:991px){
+
+      height: 250px;
+      width: 250px;
+      margin:20px;
+
+    }
+
   }
 
 }
