rateUser ready for data input

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -222,6 +222,10 @@ h6 {
   background-color: orange;
 }
 
+.rating .glyphicon-heart{
+  color: lightgray;
+}
+
 #accSettingAbove-img, #rateDriver-img/*, #rateUser-img*/{
 
   height:55%;
