--- a/scss/_rateUser.scss
+++ b/scss/_rateUser.scss
@@ -1,5 +1,13 @@
 #rateUser{
 
+  .ratingSize{
+
+    @media screen and (min-width:1500px){
+      margin:60px 0;
+    }
+
+  }
+
   .userIcon{
     position: relative;
     height: 300px;
