--- a/scss/_rateUser.scss
+++ b/scss/_rateUser.scss
@@ -31,7 +31,8 @@
     margin-top:8%;
 
     @media screen and (max-width:991px){
-      margin-top:20px;
+      margin-top:0;
+      height:135px;
 
     }
   }
