--- a/scss/_accSetting.scss
+++ b/scss/_accSetting.scss
@@ -1,16 +1,18 @@
 #accSetting{
 
   .ratingSize{
-
     @media screen and (min-width:1500px){
       margin:60px 0;
     }
-
   }
 
   .userIcon{
     position: relative;
     height: 442px;
+
+    @media screen and (max-width:991px){
+      height: 330px;
+    }
   }
 
   #user-image-content{
@@ -18,27 +20,13 @@
     position: absolute;
     top:50%;
     left:50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0);
   }
 
   img{
     margin:8%;
   }
 
-  #rateUser-content{
-    position: relative;
-    height:200px;
-    margin-top:8%;
-
-    @media screen and (max-width:991px){
-      margin-top:0;
-      height:135px;
-
-    }
-  }
-  .glyphicon, .glyphicon-heart {
-    font-size:35px;
-  }
 
   #accSettingAbove-img{
     height:55%;
@@ -51,8 +39,15 @@
       height: 250px;
       width: 250px;
       margin:20px;
-
     }
+  }
 
+  .test{
+    position:relative;
+    height:442px;
+
+    @media screen and (max-width:991px){
+      height: 300px;
+    }
   }
 }
