--- a/scss/_accSetting.scss
+++ b/scss/_accSetting.scss
@@ -29,25 +29,31 @@
 
 
   #accSettingAbove-img{
-    height:55%;
-    width:55%;
+    //height:55%;
+    width:80%;
     padding:1px;
     border: 2px solid grey;
+    max-height: 350px;
+    max-width:350px;
 
     @media screen and (max-width:991px){
-
-      height: 250px;
-      width: 250px;
+      max-height: 250px;
+      max-width: 250px;
       margin:20px;
+      width:80%;
     }
   }
 
   .test{
     position:relative;
-    height:442px;
+    height:462px;
 
     @media screen and (max-width:991px){
       height: 300px;
     }
+  }
+
+  .accProfile{
+    margin-top:20px;
   }
 }
