--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -105,7 +105,7 @@ h6 {
 }
 
 .box {
-  padding: 0 0 15px 0;
+  padding: 15px 0 15px 0;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
