--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,3 +1,78 @@
+
+
+#page-title {
+  transition: all 1s;
+  z-index: 5000;
+  font-family: 'Lobster', cursive;
+  color: #f36100;
+  height: 56px;
+  position: fixed;
+  width: 100vw;
+  pointer-events: none;
+  #title-inner {
+    cursor: pointer;
+    pointer-events: auto;
+    transition: all 1s;
+    z-index: 6000;
+    width: 100px;
+    text-align: center;
+    position: relative;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 32px;
+    line-height: 56px;
+  }
+  #cover {
+    transition: all 1s;
+    pointer-events: none;
+    z-index: 5000;
+    background-color: rgba(255, 219, 153, 0);
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+  }
+}
+
+#page-title.title-cover {
+  height: 100vh;
+  pointer-events: auto;
+  #cover {
+    pointer-events: none;
+    background-color: rgba(255, 219, 153, 1);
+  }
+  #title-inner {
+    pointer-events: none;
+    overflow: hidden;
+    width: 400px;
+
+    font-size: 72px;
+    line-height: 72px;
+    @include tablet {
+
+      font-size: 96px;
+      line-height: 96px;
+    }
+    @include desktop {
+
+      font-size: 144px;
+      line-height: 144px;
+    }
+    @include large-desktop {
+
+      font-size: 180px;
+      line-height: 180px;
+    }
+  }
+
+  #title-inner.initial {
+    width: 0;
+  }
+}
+
+
 #page-content {
   margin: 0;
   position: relative;
