--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -16,18 +16,18 @@
 
 @font-face{
   font-family: Hell_Neue;
-  src:url(/resources/fonts/HelveticaNeue-UltraLight.otf);
+  src:url(/resources/fonts/HelveticaNeuelt.ttf);
   font-weight:100;
 }
-
-@font-face{
-  font-family: Hell_Neue;
-  src:url(/resources/fonts/HelveticaNeue-light.otf);
-  font-weight:200;
-}
-
-@font-face{
-  font-family: Hell_Neue;
-  src:url(/resources/fonts/HelveticaNeue-Medium.otf);
-  font-weight:300;
-}
+//
+//@font-face{
+//  font-family: Hell_Neue;
+//  src:url(/resources/fonts/HelveticaNeue-light.otf);
+//  font-weight:200;
+//}
+//
+//@font-face{
+//  font-family: Hell_Neue;
+//  src:url(/resources/fonts/HelveticaNeue-Medium.otf);
+//  font-weight:300;
+//}
