--- a/scss/_map.scss
+++ b/scss/_map.scss
@@ -25,11 +25,11 @@
 
 .map {
   transition: none;
-  width: 500px;
+  width: 100%;
   max-width: 100%;
   height: 500px;
   position: relative;
-
+  margin: 15px 0;
 }
 .map * {
   transition: none;
