changed the UserName font

--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -45,6 +45,7 @@ a{
      margin-left: 15px;
   }
   #index_user-name{
+    font-family: 'Lobster', cursive;
     margin-left:10px;
     margin-top: 30px;
     font-size: 40px;
@@ -59,7 +60,6 @@ a{
 }
 
 #User {
-
 
   position: fixed;
   width: 100%;
