changed panel fonts and colors

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -132,7 +132,10 @@
 
 #toggling{
 
-  color:$fetchOrange;
+  //text-align:center;
+  //color:$fetchOrange;
+  font-family:Hell_Neue;
+  color:white;
   position:absolute;
   margin-top:2%;
   font-size:26px;
