--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -139,6 +139,10 @@
   position:absolute;
   margin-top:2%;
   font-size:26px;
+  margin-left: 14px;
+}
+.lever{
+  margin-left:42px;
 }
 #toggleButton
 {
